# MAVkit

./: .gitmodules  CMakeLists.txt  mavlink_dialect.h.in  tox.ini
include/mavkit/: MavMessengerInterface.h
